namespace DigitalTwin.Infrastructure.Entities;

public class MedicationEntity
{
    public Guid Id { get; set; } = Guid.NewGuid();
    public Guid PatientId { get; set; }
    public string Name { get; set; } = string.Empty;
    public string Dosage { get; set; } = string.Empty;
    public string? Frequency { get; set; }
    public int Route { get; set; }
    public string? RxCui { get; set; }
    public string? Instructions { get; set; }
    public string? Reason { get; set; }
    public Guid? PrescribedByUserId { get; set; }
    public DateTime? StartDate { get; set; }
    public DateTime? EndDate { get; set; }
    public int Status { get; set; }
    public string? DiscontinuedReason { get; set; }
    public int AddedByRole { get; set; }
    public bool IsDirty { get; set; }
    public DateTime? SyncedAt { get; set; }
    public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
    public DateTime UpdatedAt { get; set; } = DateTime.UtcNow;
    public DateTime? DeletedAt { get; set; }

    public PatientEntity Patient { get; set; } = null!;
}
