@startuml IOS Health App - Database Schema (Cloud & Mobile Local)
!theme plain
skinparam linetype ortho
skinparam backgroundColor #FEFEFE

title IOS Health App - Database Schema (Cloud PostgreSQL & Mobile SQLite)\nDigital Twin - Digitalizare dosar medical, IoT, AI, Alerte automate

' =============================================================================
' ENUMS & METADATA
' =============================================================================
' UserRole: 0=Patient, 1=Doctor, 2=Admin
' VitalSignType: 0=HeartRate, 1=SpO2, 2=Steps, 3=Calories
' MedicationStatus: 0=Active, 1=Discontinued, 2=Scheduled, 3=Completed
' MedicationRoute: 0=Oral, 1=IV, 2=Topical, 3=Subcutaneous, 4=Other
' AddedByRole: 0=Patient, 1=Doctor
' AirQualityLevel: 0=Good, 1=Moderate, 2=Unhealthy
' OAuthProvider: 0=Google
' NotificationType: various types
' NotificationSeverity: 0=Low, 1=Medium, 2=High, 3=Critical
' MedicalDocumentType: 0=Unknown, 1=Prescription, 2=Referral, 3=LabResult, 4=Discharge, 5=MedicalCertificate, 6=ImagingReport, 7=EcgReport, 8=OperativeReport, 9=ConsultationNote, 10=GenericClinicForm
' =============================================================================

entity "User" as user {
  * Id : GUID <<PK>>
  --
  Email : VARCHAR(255) <<UQ>>
  Role : INT
  FirstName : VARCHAR(100)
  LastName : VARCHAR(100)
  PhotoUrl : VARCHAR(500)
  Phone : VARCHAR(50)
  Address : VARCHAR(500)
  City : VARCHAR(100)
  Country : VARCHAR(100)
  DateOfBirth : DATETIME
  IsSynced : BOOLEAN <<Mobile Only>>
  IsDirty : BOOLEAN <<Cloud Only>>
  SyncedAt : DATETIME <<Cloud Only>>
  CreatedAt : DATETIME
  UpdatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "UserOAuth" as user_oauth {
  * Id : GUID <<PK>> <<Cloud Only>>
  --
  UserId : GUID <<FK>>
  Provider : INT
  ProviderUserId : VARCHAR(255)
  Email : VARCHAR(255)
  AccessToken : VARCHAR(1000)
  RefreshToken : VARCHAR(1000)
  ExpiresAt : DATETIME
  IsDirty : BOOLEAN
  SyncedAt : DATETIME
  CreatedAt : DATETIME
  UpdatedAt : DATETIME
  DeletedAt : DATETIME
}

entity "Patient" as patient {
  * Id : GUID <<PK>>
  --
  UserId : GUID <<FK, UQ>>
  BloodType : VARCHAR(10)
  Allergies : TEXT
  MedicalHistoryNotes : TEXT
  Weight : DECIMAL(10,2) [kg]
  Height : DECIMAL(10,2) [cm]
  BloodPressureSystolic : INT [mmHg]
  BloodPressureDiastolic : INT [mmHg]
  Cholesterol : DECIMAL(10,2) [mmol/L]
  Cnp : VARCHAR(13)
  IsSynced : BOOLEAN <<Mobile Only>>
  IsDirty : BOOLEAN <<Cloud Only>>
  SyncedAt : DATETIME <<Cloud Only>>
  CreatedAt : DATETIME
  UpdatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "DoctorPatientAssignment (Cloud)" as doctor_patient_cloud {
  * Id : GUID <<PK>> <<Cloud Only>>
  --
  DoctorId : GUID <<FK>>
  PatientId : GUID <<FK>>
  PatientEmail : VARCHAR(255)
  AssignedByDoctorId : GUID <<FK>>
  Notes : TEXT
  IsDirty : BOOLEAN
  SyncedAt : DATETIME
  AssignedAt : DATETIME
  CreatedAt : DATETIME
  DeletedAt : DATETIME
}

entity "DoctorPatientAssignment (Mobile Local)" as doctor_patient_mobile {
  * UserId : GUID <<PK, FK>> <<Mobile Only>>
  * DoctorId : GUID <<PK>> <<Mobile Only>>
  --
  FullName : VARCHAR(255)
  Email : VARCHAR(255)
  PhotoUrl : VARCHAR(500)
  AssignedAt : DATETIME
  Notes : TEXT
}

entity "VitalSign" as vitalsign {
  * Id : GUID <<PK>>
  --
  PatientId : GUID <<FK>>
  Type : INT
  Value : DECIMAL(18,4)
  Unit : VARCHAR(20)
  Source : VARCHAR(50)
  IsSynced : BOOLEAN <<Mobile Only>>
  IsDirty : BOOLEAN <<Cloud Only>>
  SyncedAt : DATETIME <<Cloud Only>>
  Timestamp : DATETIME
  CreatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "Medication" as medication {
  * Id : GUID <<PK>>
  --
  PatientId : GUID <<FK>>
  Name : VARCHAR(255)
  Dosage : VARCHAR(100)
  Frequency : VARCHAR(100)
  Route : INT
  RxCui : VARCHAR(20)
  Instructions : TEXT
  Reason : VARCHAR(255)
  PrescribedByUserId : GUID <<FK>>
  StartDate : DATETIME
  EndDate : DATETIME
  Status : INT
  DiscontinuedReason : TEXT
  AddedByRole : INT
  IsSynced : BOOLEAN <<Mobile Only>>
  IsDirty : BOOLEAN <<Cloud Only>>
  SyncedAt : DATETIME <<Cloud Only>>
  CreatedAt : DATETIME
  UpdatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "SleepSession" as sleep {
  * Id : GUID <<PK>>
  --
  PatientId : GUID <<FK>>
  StartTime : DATETIME
  EndTime : DATETIME
  DurationMinutes : INT
  QualityScore : DECIMAL(5,2)
  IsSynced : BOOLEAN <<Mobile Only>>
  IsDirty : BOOLEAN <<Cloud Only>>
  SyncedAt : DATETIME <<Cloud Only>>
  CreatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "EnvironmentReading" as env_reading {
  * Id : GUID <<PK>>
  --
  Latitude : DECIMAL(10,7)
  Longitude : DECIMAL(10,7)
  LocationDisplayName : VARCHAR(200) <<Mobile Only>>
  PM25 : DECIMAL(10,2)
  PM10 : DECIMAL(10,2)
  O3 : DECIMAL(10,2)
  NO2 : DECIMAL(10,2)
  Temperature : DECIMAL(5,2)
  Humidity : DECIMAL(5,2)
  AirQualityLevel : INT
  AqiIndex : INT
  IsDirty : BOOLEAN
  SyncedAt : DATETIME
  Timestamp : DATETIME
  CreatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "OcrDocument" as ocr_document {
  * Id : GUID <<PK>>
  --
  PatientId : GUID <<FK>>
  OpaqueInternalName : VARCHAR(500)
  MimeType : VARCHAR(100)
  DocumentType : VARCHAR(50)
  PageCount : INT
  Sha256OfNormalized : VARCHAR(64)
  SanitizedOcrPreview : TEXT
  EncryptedVaultPath : VARCHAR(500)
  IsDirty : BOOLEAN
  SyncedAt : DATETIME
  ScannedAt : DATETIME
  CreatedAt : DATETIME
  UpdatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "MedicalHistoryEntry" as med_history {
  * Id : GUID <<PK>>
  --
  PatientId : GUID <<FK>>
  SourceDocumentId : GUID <<FK>>
  Title : VARCHAR(255)
  MedicationName : VARCHAR(255)
  Dosage : VARCHAR(100)
  Frequency : VARCHAR(100)
  Duration : VARCHAR(100)
  Notes : TEXT
  Summary : TEXT
  Confidence : DECIMAL(5,2)
  IsDirty : BOOLEAN
  SyncedAt : DATETIME
  EventDate : DATETIME
  CreatedAt : DATETIME
  UpdatedAt : DATETIME
  DeletedAt : DATETIME <<Cloud Only>>
}

entity "Notification" as notification {
  * Id : GUID <<PK>> <<Cloud Only>>
  --
  RecipientUserId : GUID <<FK>>
  RecipientRole : INT
  Title : VARCHAR(255)
  Body : TEXT
  Type : INT
  Severity : INT
  PatientId : GUID
  ActorUserId : GUID
  ActorName : VARCHAR(255)
  ReadAt : DATETIME
  CreatedAt : DATETIME
  DeletedAt : DATETIME
}

entity "ChatMessage" as chat_message {
  * Id : GUID <<PK>> <<Mobile Only>>
  --
  Content : TEXT
  IsUser : BOOLEAN
  Timestamp : DATETIME
}

entity "AppCache" as app_cache {
  * Key : VARCHAR(255) <<PK>> <<Mobile Only>>
  --
  ValueJson : TEXT
  StoredAtUtc : DATETIME
  Fingerprint : VARCHAR(255)
  UpdatedAtUtc : DATETIME
}

' =============================================================================
' RELATIONSHIPS
' =============================================================================
user ||--o| patient : "is"
user ||--o{ user_oauth : "has"
user ||--o{ doctor_patient_cloud : "assigns"
user ||--o{ doctor_patient_mobile : "assigned to (local cache)"
user ||--o{ medication : "prescribes"
user ||--o{ notification : "receives"
patient ||--o{ doctor_patient_cloud : "assigned to"
patient ||--o{ vitalsign : "has"
patient ||--o{ medication : "takes"
patient ||--o{ sleep : "has"
patient ||--o{ ocr_document : "has"
patient ||--o{ med_history : "has"
ocr_document ||--o{ med_history : "generates"

' =============================================================================
' COMMENTS / NOTES
' =============================================================================
note top of user
  **User** - Base identity for all actors (Cloud & Mobile).
  Role (int): 0=Patient, 1=Doctor, 2=Admin.
  Email unique - used for doctor-patient assignment.
  Complete profile: FirstName, LastName, PhotoUrl, Phone, Address, City, Country, DateOfBirth.
  Sync tracking: IsSynced (Mobile SQLite), IsDirty/SyncedAt (Cloud PostgreSQL).
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note top of user_oauth
  **UserOAuth** - Google OAuth integration (Cloud Only).
  ProviderUserId = Google "sub" claim.
  AccessToken, RefreshToken for API calls.
  Email from Google (can differ from User.Email).
end note

note top of patient
  **Patient** - Patient-specific medical and biometric data (Cloud & Mobile).
  1:1 with User when Role=Patient.
  BloodType, Allergies, MedicalHistoryNotes.
  Biometric data: Weight (kg), Height (cm), BP Systolic/Diastolic (mmHg), Cholesterol (mmol/L).
  Cnp: Romanian Personal Numeric Code (13 digits).
  Sync tracking: IsSynced (Mobile SQLite), IsDirty/SyncedAt (Cloud PostgreSQL).
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note top of doctor_patient_cloud
  **DoctorPatientAssignment (Cloud)** - Doctor-Patient relationship in Cloud PostgreSQL database.
  Doctor enters patient Email (unique) → links to User/Patient.
  PatientEmail: email used when doctor assigned (audit trail).
  AssignedByDoctorId: who created the assignment.
  UNIQUE(DoctorId, PatientId) - no duplicate assignments.
  Soft delete: DeletedAt.
end note

note top of doctor_patient_mobile
  **DoctorPatientAssignment (Mobile Local)** - Read-only local cache of doctor assignments.
  Stored in Mobile SQLite. Primary key is (UserId, DoctorId).
  FullName, Email, PhotoUrl of doctor cached for offline display.
end note

note top of vitalsign
  **VitalSign** - Health metrics from wearables/IoT/HealthKit (Cloud & Mobile).
  Type (int): 0=HeartRate, 1=SpO2, 2=Steps, 3=Calories.
  Source: HealthKit, Mock, IoT, etc.
  Timestamp = when measured (supports date range queries).
  Sync tracking: IsSynced (Mobile SQLite), IsDirty/SyncedAt (Cloud PostgreSQL).
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note top of medication
  **Medication** - Past, current, future medications (Cloud & Mobile).
  Status (int): 0=Active, 1=Discontinued, 2=Scheduled, 3=Completed.
  StartDate/EndDate: timeline for past/future.
  Route (int): 0=Oral, 1=IV, 2=Topical, 3=Subcutaneous, 4=Other.
  RxCui: RxNorm identifier for drug interaction checks.
  PrescribedByUserId → User (Doctor).
  DiscontinuedReason when Status=Discontinued.
  AddedByRole: 0=Patient, 1=Doctor (audit).
  Sync tracking: IsSynced (Mobile SQLite), IsDirty/SyncedAt (Cloud PostgreSQL).
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note top of sleep
  **SleepSession** - Sleep analysis from HealthKit (Cloud & Mobile).
  StartTime, EndTime, DurationMinutes.
  QualityScore: 0-100 quality assessment.
  Sync tracking: IsSynced (Mobile SQLite), IsDirty/SyncedAt (Cloud PostgreSQL).
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note bottom of env_reading
  **EnvironmentReading** - Environmental pollution metrics (Cloud & Mobile).
  Location-based (Lat/Lon), cached locally by location.
  LocationDisplayName (Mobile SQLite only): display name of the location where reading was taken.
  Pollutants: PM25, PM10, O3, NO2.
  AirQualityLevel (int): 0=Good, 1=Moderate, 2=Unhealthy.
  AqiIndex: Air Quality Index (0-500+).
  Sync tracking: IsDirty, SyncedAt on both SQLite and PostgreSQL.
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note top of ocr_document
  **OcrDocument** - Scanned medical documents with vault encryption (Cloud & Mobile).
  PatientId FK (accessible only by patient).
  OpaqueInternalName: non-predictable filename.
  MimeType: image/png, application/pdf, etc.
  DocumentType: Prescription, Lab Result, Discharge, etc.
  PageCount: number of pages in document.
  Sha256OfNormalized: hash for deduplication.
  SanitizedOcrPreview: OCR text preview (sanitized for display).
  EncryptedVaultPath: AES-GCM vault path (local only, never synced).
  Sync tracking: IsDirty, SyncedAt (vault path never leaves device).
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note top of med_history
  **MedicalHistoryEntry** - Structured medical history extracted from documents (Cloud & Mobile).
  PatientId, SourceDocumentId (from OcrDocument).
  Title, MedicationName, Dosage, Frequency, Duration.
  Notes, Summary: extracted narrative data.
  Confidence: 0-1 score for AI extraction quality.
  EventDate: date of the medical event.
  Sync tracking: IsDirty, SyncedAt.
  Soft delete: DeletedAt (Cloud PostgreSQL only).
end note

note top of notification
  **Notification** - System notifications for alerts and updates (Cloud Only).
  RecipientUserId: who receives the notification.
  RecipientRole: user role at time of notification (audit).
  Type, Severity (0=Low, 1=Medium, 2=High, 3=Critical).
  PatientId: patient context (if relevant).
  ActorUserId, ActorName: who triggered the notification.
  ReadAt: null until user reads notification.
  NOT synced (server-only, real-time).
end note

note bottom of chat_message
  **ChatMessage** - Chat history messages for local AI bot assistant (Mobile Only).
  Content: message text content.
  IsUser: true if user sent the message, false if AI bot responded.
  Timestamp: message date and time.
end note

note bottom of app_cache
  **AppCache** - Local cached payloads (Mobile SQLite Only).
  Key: cache lookup key.
  ValueJson: JSON string payload.
  StoredAtUtc/UpdatedAtUtc: cache timestamp metadata.
  Fingerprint: validation fingerprint.
end note

@enduml
